Ajout d'un top10 + correction du processEvent
