# gamification-impl/src/main/java/amt/project2/gamification/entities/UserEntity.java
@@ -1,10 +1,11 @@
 package amt.project2.gamification.entities;
 
+import amt.project2.gamification.api.dto.BadgeSummary;
 import lombok.Data;
 
 import javax.persistence.*;
 import java.io.Serializable;
-import java.util.Set;
+import java.util.*;
 
 @Entity
 @Data
@@ -21,11 +22,9 @@ public class UserEntity implements Serializable {
     private LadderEntity actualLadder;
 
     @ManyToMany
-    private Set<BadgeEntity> badges;
+    private Set<BadgeEntity> badges = new HashSet<>();
 
     private String idInGamifiedApplication;
-
-    private int numberOfEvents;
 
     private int nbrPoint;
 
@@ -35,5 +34,17 @@ public class UserEntity implements Serializable {
 
     public void addBadge(BadgeEntity badgeEntity){
         badges.add(badgeEntity);
+    }
+
+    public List<BadgeSummary> getBadgesSummary(){
+        List<BadgeSummary> badgesList = new ArrayList<>();
+
+        for ( BadgeEntity badge : badges) {
+            BadgeSummary badgeSummary = new BadgeSummary();
+            badgeSummary.setName(badge.getName());
+            badgesList.add(badgeSummary);
+        }
+
+        return badgesList;
     }
 }
